# trading-strategy-evaluation

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: app.py
src/engine/: core.py  main.py
src/strategies/: base.py
